--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link href='http://fonts.googleapis.com/css?family=Hammersmith+One|Questrial' rel='stylesheet' type='text/css'>
 		<script src="js/modernizr.custom.63321.js"></script>
+		<link rel="stylesheet" id="style" type="text/css" href="">
 	</head>
 <body>
 		<div class="container">
