--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function checkCss(){
 			 callback(css);
 			console.log("AFTER THE CALLBACK");
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
-			 console.log("CSS IS " + css + " IT S BEEN RESETTED WTF"); 
+			 console.log("CSS IS " + css + " IT come RESETTED after this function close WTF"); 
           
 			
 		 } else { 
