--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ function checkCss(){
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
 			 currentHtml.src = item;
 			 console.log("this is print after currentHtml.src is changed");
-			 var newhtmlcss = document.getElementbyId("Iframe").contentWindow.document.getElementById("style").href
+			 var newhtmlcss = document.getElementById("Iframe").contentWindow.document.getElementById("style").href
 			 console.log("IF CSS is the same of the line above then the new html its not loaded yet: " + newhtmlcss);
 			     console.log("im changeHtml, i check there is a css loaded, it's " + css);
 			 console.log("BEFORE THE CALLBACK");
