--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ function checkCss(){
   </header>
 
  <div id="content">
-    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" onLoad="console.log("iframe src is changed")" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" onLoad="console.log('iframe src is changed');" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
