--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function checkCss(){
 			 console.log("IF CSS is the same of the line above then the new html its not loaded yet: " + newhtmlcss);
 			     console.log("im changeHtml, i check there is a css loaded, it's " + css);
 			 console.log("BEFORE THE CALLBACK");
-			 callback(css);
+			 callback(css).then(()=>{console.log('CSS MUST PERSIST IM THE ASYNC CALLBACK RESOLVED');}).catch(e=>{console.log('im async change css callback in reject, error: '+e);});
 			console.log("AFTER THE CALLBACK");
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
 			 console.log("CSS IS " + css + " IT come RESETTED after this function close WTF"); 
@@ -79,6 +79,16 @@ function checkCss(){
 		 } 
 	 }
 	 </script>
+	 
+	 <script type="text/javascript">
+	function asyncChangeCss(source){
+		return new Promise((resolve, reject) => {
+			var doc = document.getElementById("Iframe")
+			doc.onload = resolve;
+			doc.onerror = reject;
+			doc.contentWindow.document.getElementById("style").setAttribute("href",item);
+	 </script>
+	 
 	 
   <script type="text/javascript">
 	   // Works with $.get too!
@@ -146,7 +156,7 @@ function checkCss(){
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', change_css)">The Cut</a></li>
    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', change_css)">TLS</a></li>
-	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', change_css)">EU Directive</a></li>
+	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', asyncChangeCss)">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
