--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@ function checkCss(){
 	
 }
 	 </script>
+	 	 <script type="text/javascript">
+	function asyncChangeCss(source){
+		return new Promise((resolve, reject) => {
+			var doc = document.getElementById("Iframe")
+			doc.onload = resolve;
+			doc.onerror = reject;
+			doc.contentWindow.document.getElementById("style").setAttribute("href",item);
+	 </script>
 	 
 
 	 <script type="text/javascript">
@@ -80,14 +88,7 @@ function checkCss(){
 	 }
 	 </script>
 	 
-	 <script type="text/javascript">
-	function asyncChangeCss(source){
-		return new Promise((resolve, reject) => {
-			var doc = document.getElementById("Iframe")
-			doc.onload = resolve;
-			doc.onerror = reject;
-			doc.contentWindow.document.getElementById("style").setAttribute("href",item);
-	 </script>
+
 	 
 	 
   <script type="text/javascript">
@@ -152,11 +153,11 @@ function checkCss(){
     <ul class="dropdown-menu">
 	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', change_css)">Bloomberg</a></li>
 <!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
-	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', change_css)">Harpers</a></li>
+	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', asyncChangeCss)">Harpers</a></li>
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
-<li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', change_css)">The Cut</a></li>
+<li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', asyncChangeCss)">The Cut</a></li>
    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', change_css)">TLS</a></li>
-	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', asyncChangeCss)">EU Directive</a></li>
+	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', change_css)">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
