--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function checkCss(){
 	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', change_css)">Bloomberg</a></li>
 <!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
 	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', asyncChangeCss)">Harpers</a></li>
-      <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
+      <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html',asyncChangeCss)">Huffington</a></li>
 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', asyncChangeCss)">The Cut</a></li>
    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', change_css)">TLS</a></li>
 	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', change_css)">EU Directive</a></li>
