--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function checkCss(){
 			var doc = document.getElementById("Iframe")
 			doc.onload = resolve;
 			doc.onerror = reject;
-			doc.contentWindow.document.getElementById("style").setAttribute("href",item);
+			doc.contentWindow.document.getElementById("style").setAttribute("href",source);
 		}
 				   }
 	 </script>
