--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@ function checkCss(){
 	var css = document.getElementById("Iframe").contentWindow.document.getElementById("style").href;
 	var iframe = document.getElementById("Iframe").href;
 	var css2 = document.getElementById("Iframe").contentWindow.document.getElementById("style");
-	console.log("im check css i print this, ifram: " + iframe + " css2 " + css2);
 	if (css === '') { 
 		console.log("I'm checkCSS i print false, style.href === '' "); 
 		return false; }
-	else { console.log("I'm check CSS i print true, style.href ===" + css); 
+	else { console.log("I'm check CSS i print true, style.href is " + css); 
 		return true; }
 	
 }
@@ -68,10 +67,7 @@ function checkCss(){
 		 if (checkCss()) {
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
 			 currentHtml.src = item;
-			 console.log("this is print after currentHtml.src is changed");
-			 var newhtmlcss = document.getElementById("Iframe").contentWindow.document.getElementById("style").href
-			 console.log("IF CSS is the same of the line above then the new html its not loaded yet: " + newhtmlcss);
-			     console.log("im changeHtml, i check there is a css loaded, it's " + css);
+			 console.log("im changeHtml, i check there is a css loaded, it's, i save it and pass to the callback " + css);
 			 console.log("BEFORE THE CALLBACK");
 			 let promise = callback(css)
 			 promise.then(()=>{console.log('CSS MUST PERSIST IM THE ASYNC CALLBACK RESOLVED');},e=>{console.log('im async change css callback in reject, error: '+e);});
