--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ function checkCss(){
 	 	 <script type="text/javascript">
 	function asyncChangeCss(source){
 		return new Promise((resolve, reject) => {
-			var doc = document.getElementById("Iframe")
+			var doc = document.getElementById("Iframe");
+			console.log("IM THE PROMISE, I GOTTA SET CSS, FOR NEW DOCUMENT: '+doc.src);
 			doc.onload = resolve;
 			doc.onerror = reject;
 			doc.contentWindow.document.getElementById("style").setAttribute("href",source);
@@ -66,8 +67,9 @@ function checkCss(){
 		 
 		 if (checkCss()) {
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
-			 currentHtml.src = item;
+			 
 			 console.log("im changeHtml, i check there is a css loaded, it's, i save it and pass to the callback " + css);
+			 console.log("im changing html, current page is: " + currentHtml.src);
 			 console.log("BEFORE THE CALLBACK");
 			 let promise = callback(css)
 			 promise.then(()=>{console.log('CSS MUST PERSIST IM THE ASYNC CALLBACK RESOLVED');},e=>{console.log('im async change css callback in reject, error: '+e);});
