--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ function checkCss(){
 	function asyncChangeCss(source){
 		return new Promise((resolve, reject) => {
 			var doc = document.getElementById("Iframe");
-			/* console.log("IM THE PROMISE, I GOTTA SET CSS, FOR DOCUMENT: " + doc.src);*/
-			doc.onload = resolve;
+			console.log("IM THE PROMISE old DOCUMENT is: " + doc.src);*/
+			doc.onload = () => resolve(source);
 			doc.onerror = reject;
 			doc.contentWindow.document.getElementById("style").setAttribute("href",source);
 		} );
@@ -67,12 +67,12 @@ function checkCss(){
 		 
 		 if (checkCss()) {
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
-			 
+			 currentHtml.src = item;
 			 console.log("im changeHtml, i check there is a css loaded, it's, i save it and pass to the callback " + css);
 			 console.log("im changing html, current page is: " + currentHtml.src);
 			 console.log("BEFORE THE CALLBACK");
 			 let promise = callback(css);
-			 promise.then(()=>{console.log('CSS MUST PERSIST IM THE ASYNC CALLBACK RESOLVED');},e=>{console.log('im async change css callback in reject, error: '+e);});
+			 promise.then(source =>{document.getElementById("iframe").contentWindow.document.getElementById("style").setAttribute("href",source);},e=>{console.log('im async change css callback in reject, error: ' + e);});
 			console.log("AFTER THE CALLBACK");
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
 			 console.log("CSS IS " + css + " IT come RESETTED after this function close WTF"); 
