--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function checkCss(){
 			 console.log("im changing html, current page is: " + currentHtml.src);
 			 console.log("BEFORE THE CALLBACK");
 			 let promise = callback(css);
-			 promise.then(source =>{document.getElementById("iframe").contentWindow.document.getElementById("style").setAttribute("href",source);},e=>{console.log('im async change css callback in reject, error: ' + e);});
+			 promise.then(source =>{document.getElementById("Iframe").contentWindow.document.getElementById("style").setAttribute("href",source);},e=>{console.log('im async change css callback in reject, error: ' + e);});
 			console.log("AFTER THE CALLBACK");
 			 var css = currentHtml.contentWindow.document.getElementById("style").href;
 			 console.log("CSS IS " + css + " IT come RESETTED after this function close WTF"); 
