--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@ function checkCss(){
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', change_css)">Bloomberg</a></li>
+	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', asyncChangeCss)">Bloomberg</a></li>
 <!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
 	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', asyncChangeCss)">Harpers</a></li>
       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html',asyncChangeCss)">Huffington</a></li>
 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', asyncChangeCss)">The Cut</a></li>
-   <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', change_css)">TLS</a></li>
-	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', change_css)">EU Directive</a></li>
+   <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', asyncChangeCss)">TLS</a></li>
+	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', asyncChangeCss)">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
