--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
 	// function checks if a css is already loaded returns True or False
 	// in the logic of WebSite if true html is changed else if false randomCss() is called
 function checkCss(){
+	var cssStyleSheets['https://tttproject.github.io/style/ancient.css',
+				     'https://tttproject.github.io/style/XIXcenturystyle.css',
+				      'https://tttproject.github.io/style/css_primo_novecento_finale.css',
+				      'https://tttproject.github.io/style/1950style.css',
+				      'https://tttproject.github.io/style/css_fine_novecento_finale.css'];
+	
 	var css = document.getElementById("Iframe").contentWindow.document.getElementById("style").href;
-	var iframe = document.getElementById("Iframe").href;
-	var css2 = document.getElementById("Iframe").contentWindow.document.getElementById("style");
-	if (css === '') { 
-		console.log("I'm checkCSS i print false, style.href === '' "); 
-		return false; }
-	else { console.log("I'm check CSS i print true, style.href is " + css); 
-		return true; }
+	if (cssStyleSheets.include(css)){ console.log("I'm check CSS i print true, there is css loaded: " + css); 
+		return true; } 
+	else { 	console.log("I'm checkCSS i print false, css loaded hasn't to be cached: so i call randomCss()  " + css); 
+		return false; } }
 	
 }
 	 </script>
