--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	// function checks if a css is already loaded returns True or False
 	// in the logic of WebSite if true html is changed else if false randomCss() is called
 function checkCss(){
-	var cssStyleSheets['https://tttproject.github.io/style/ancient.css',
+	var cssStyleSheets = ['https://tttproject.github.io/style/ancient.css',
 				     'https://tttproject.github.io/style/XIXcenturystyle.css',
 				      'https://tttproject.github.io/style/css_primo_novecento_finale.css',
 				      'https://tttproject.github.io/style/1950style.css',
