--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@ function checkCss(){
 	if (cssStyleSheets.include(css)){ console.log("I'm check CSS i print true, there is css loaded: " + css); 
 		return true; } 
 	else { 	console.log("I'm checkCSS i print false, css loaded hasn't to be cached: so i call randomCss()  " + css); 
-		return false; } }
-	
+		return false;} 
 }
-	 </script>
+	
+
+</script>
 	 	 <script type="text/javascript">
 	function asyncChangeCss(source){
 		return new Promise((resolve, reject) => {
