--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function checkCss(){
 
 		 currentHtml.src = item;
 		var random_css = randomCss();
-		let promise = callback(css);
+		let promise = callback(random_css);
 		promise.then(source => {document.getElementById("Iframe").contentWindow.document.getElementById("style").setAttribute("href",source);},e=>{console.log('im async change css callback in reject, error: ' + e);});
 		 
 console.log("Im EXITING FROM RANDOM CHANGE HTML");
