--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 			 'https://tttproject.github.io/docs/Eu_directive/eu_directive.html',
 	];	
 	var content = document.getElementById("Iframe"); 	
-	if (htmlPages.includes(content)] {	
+	if (htmlPages.includes(content)) {	
      	        console.log("im change_css iv been called im gonna set css: " + item);
 		if (content.contentWindow.document.getElementById("style") !== null) {
 		content.contentWindow.document.getElementById("style").setAttribute("href",item);
