--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ function checkCss(){
 	 }
 	 </script>
 	 <script type="text/javascript">
+	function navbarChangeHtml(source) {
+		var currenthtml = document.getElementById("Iframe");
+		currenthtml.src = source;
+	}
+	 </script>
+		 
+	 <script type="text/javascript">
 	 function changeHtml(item, callback){
 		 var currentHtml = document.getElementById("Iframe");
 		 
@@ -186,13 +193,13 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', asyncChangeCss)">Bloomberg</a></li>
+	       <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/bloomberg/index.html')">Bloomberg</a></li>
 <!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
-	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', asyncChangeCss)">Harpers</a></li>
-      <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html',asyncChangeCss)">Huffington</a></li>
-<li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', asyncChangeCss)">The Cut</a></li>
-   <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', asyncChangeCss)">TLS</a></li>
-	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', asyncChangeCss)">EU Directive</a></li>
+	 <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html')">Harpers</a></li>
+      <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html')">Huffington</a></li>
+<li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/thecut/thecut.html')">The Cut</a></li>
+   <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html')">TLS</a></li>
+	    <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html')">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
