--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 		var randomhtml = randomHtml();
 		var doc = document.getElementById("Iframe");
 		doc.src = randomhtml;
-		change_css(item);
+		//change_css(item);
 		console.log("RECURSION NO STOP, doc.src doesn't apply before change_css is called again");
 	}
 	 
