--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-	       <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/bloomberg/index.html')">Bloomberg</a></li>
+	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html', asyncChangeCss)">Bloomberg</a></li>
 <!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
-	 <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html')">Harpers</a></li>
-      <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html')">Huffington</a></li>
-<li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/thecut/thecut.html')">The Cut</a></li>
-   <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html')">TLS</a></li>
-	    <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html')">EU Directive</a></li>
+	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html', asyncChangeCss)">Harpers</a></li>
+      <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/huffington/Huffington_Final.html', asyncChangeCss)">Huffington</a></li>
+<li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html', asyncChangeCss)">The Cut</a></li>
+   <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html', asyncChangeCss)">TLS</a></li>
+	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html', asyncChangeCss)">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
@@ -221,11 +221,11 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
       <div id="menu">
     <ul> 
 <!--      <li><a href="https://tttproject.github.io/disclaimer/disclaimer.html" target="targetframe">Disclaimer</a></li>-->
- 	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/disclaimer/disclaimer.html'), change_css" >Disclaimer</a></li>
-	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/documentation/documentation.html'), change_css">Documentation</a></li>     
+ 	<li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/disclaimer/disclaimer.html')" >Disclaimer</a></li>
+	<li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/documentation/documentation.html')">Documentation</a></li>     
   <!--    <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>-->
- 	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/about/about.html', change_css)">About</a></li>
-     <li><a href="#" onclick="changeHtml('https://tttproject.github.io/cover/cover.html', change_css)">Cover</a></li>
+ 	<li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/about/about.html')">About</a></li>
+     <li><a href="#" onclick="navbarChangeHtml('https://tttproject.github.io/cover/cover.html')">Cover</a></li>
 
     </ul>
 </div>
