--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 		var doc = document.getElementById("Iframe");
 		doc.src = randomhtml;
 		//change_css(item);
-		console.log("RECURSION NO STOP, doc.src doesn't apply before change_css is called again");
+		let promise = asyncChangeCss(item);
+		promise.then(source => {document.getElementById("Iframe").contentWindow.document.getElementById("style").setAttribute("href",source);},e=>{console.log('im async change css callback in reject, error: ' + e);});
+		console.log("IM EXITING FROM change_css, called when no html is loaded");
 	}
 	 
 	 
