--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ iframe.addEventListener("DOMAttrModified", function(event) {
        console.log("im the event listener ");
     }
 });
-<script>
+</script>
 	
  </head>
  <body style="">
