--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ iframe.addEventListener("DOMAttrModified", function(event) {
   </header>
 
  <div id="content">
-    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" onload="console.log('iframe src is changed');" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" onLoad="alert('iframe src is changed');" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
