--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
   </script>
 	 
 <script type="text/javascript">
-function checkFrame() {
- /*      var iframe = document.frames['ID_OF_IFRAME'];
+/*function checkFrame() {
+       var iframe = document.frames['ID_OF_IFRAME'];
 
 
         if(iframe == null) alert('Frame not found');
