--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 		element.type = "text/javascript"; 
 		element.id = "scriptid"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
+		  
+		jsstyle = content.contentWindow.document.createElement("script"); 
+		jsstyle.src = '../../js/three.js' 
+		jsstyle.type = "text/javascript"; 
+		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 	  
 	  }
   </script>
