--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 		  
 		jsstyle = content.contentWindow.document.createElement("script"); 
-		jsstyle.src = '../../js/three.js' 
+		jsstyle.src = 'script/three.js' 
 		jsstyle.type = "text/javascript"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 	  
