--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script src="script/1.js"></script> 
 
   <title>Home</title>
 <script type="text/javascript">
@@ -184,7 +183,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 		  
 		jsstyle = content.contentWindow.document.createElement("script"); 
-		jsstyle.src = 'js/three.js' 
+		jsstyle.src = '../../js/three.js' 
 		jsstyle.type = "text/javascript"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 	  
