--- a/index.html
+++ b/index.html
@@ -175,7 +175,17 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
      	//content.contentWindow.document.getElementById('scri').src = script
 	//var ele = content.contentWindow.document.getElementById("scri").getAttribute("src");
 	//alert(ele)
-
+			  
+		element = content.contentWindow.document.createElement("script"); 
+		element.src = '../../js/new.js' 
+		element.type = "text/javascript"; 
+		element.id = "scriptid"; 
+		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
+		  
+		jsstyle = content.contentWindow.document.createElement("script"); 
+		jsstyle.src = '../../js/three.js' 
+		jsstyle.type = "text/javascript"; 
+		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(jsstyle); 
 	  
 	  }
   </script>
