--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 	//alert(ele)
 			  
 		element = content.contentWindow.document.createElement("script"); 
-		element.src = '../../js/new.js' 
+		element.src = 'js/new.js' 
 		element.type = "text/javascript"; 
 		element.id = "scriptid"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(element); 
 		  
 		jsstyle = content.contentWindow.document.createElement("script"); 
-		jsstyle.src = '../../js/three.js' 
+		jsstyle.src = 'js/three.js' 
 		jsstyle.type = "text/javascript"; 
 		content.contentWindow.document.getElementsByTagName("head")[0].appendChild(jsstyle); 
 	  
