--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ iframe.addEventListener("DOMAttrModified", function(event) {
 	
  </head>
  <body style="">
+
  	<header> 
 <div class="container">
 
@@ -258,13 +259,13 @@ iframe.addEventListener("DOMAttrModified", function(event) {
 </div>
 
   </header>
-
+<div id="loading">
  <div id="content">
     <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
-
+	 </div>
  <!-- <div class="container" id="dr1">
    <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
