--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
   <title>Home</title>
 <script type="text/javascript">
+	 $("#Iframe").contents.wrapInner( "<div id='loading'></div>");	 
+	 </script>
+	 
+	 
+<script type="text/javascript">
 	// function checks if a css is already loaded returns True or False
 	// in the logic of WebSite if true html is changed else if false randomCss() is called
 function checkCss(){
