--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <title>Home</title>
 <script type="text/javascript">
-	 $("#Iframe").contents.wrapInner( "<div id='loading'></div>");	 
+	 $("#Iframe").contents.find("html").wrapInner( "<div id='loading'></div>");	 
 	 </script>
 	 
 	 
