--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="script/1.js"></script> 
 
-  <title>Home</title>
-<script type="text/javascript">
-	 $("#Iframe").contents().find("html").wrapInner( "<div id='loading'></div>");	 
-	 </script>
+
 	 
 	 
 <script type="text/javascript">
@@ -265,13 +262,14 @@ iframe.addEventListener("DOMAttrModified", function(event) {
 
   </header>
 
+<img src="https://tttproject.github.io/documentation/images/black_denim.jpg" style="height:0%;width:0%"> 
  <div id="content">
-	 <div id="loading">
+
     <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
     </iframe>
 
   </div>
-	 </div>
+
  <!-- <div class="container" id="dr1">
    <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
