--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@ iframe.addEventListener("DOMAttrModified", function(event) {
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
-      <li><a href="#" onclick="change_css('https://tttproject.github.io/style/ancient.css')">Before 1500AC</a></li>
+      <li><a href="#" onclick="change_css('https://tttproject.github.io/style/ancient.css')">Before 1500</a></li>
       <li><a href="#" onclick="change_css('https://tttproject.github.io/style/XIXcenturystyle.css')">XIX Century</a></li>
       <li><a href="#" onclick="change_css('https://tttproject.github.io/style/css_primo_novecento_finale.css')">First half of the XX Century</a></li>
       <li><a href="#" onclick="change_css('https://tttproject.github.io/style/1950style.css')">Second half of the XX Century</a></li>
       <li><a href="#" onclick="change_css('https://tttproject.github.io/style/css_fine_novecento_finale.css')">Late XX Century</a></li>
-      <li><a href="#" onclick ="add_script('../../style/slide.css','../../js/new.js')">Future</a></li>
+      <li><a href="#" onclick ="add_script('../../style/slide.css','../../js/new.js')">2040: the Future</a></li>
     </ul>
   </div></div>
     <div class="col-sm-5">
